force-app/main/default/objects/Add_on_Service__c/Add_on_Service__c.object-meta.xml
<CustomObject>
    <description>Add-on Services for Restaurants like : WhiteLable website, Phone Ordering, Pick-up service etc.</description>
    <label>Add-on Service</label>
    <nameField>
        <displayFormat>AOS-{000000}</displayFormat>
        <label>Add-on Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add-on Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>