force-app/main/default/objects/Add_on_Service__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Id_List_Add_On__r.Company__r.Name</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>