force-app/main/default/objects/Add_on_Service__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Service End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>