force-app/main/default/objects/Add_on_Service__c/fields/Exclusive_with_us__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_with_us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive with us ?</label>
    <type>Checkbox</type>
</CustomField>