force-app/main/default/objects/Add_on_Service__c/fields/Id_List_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Add On</label>
    <referenceTo>List_Add_On__c</referenceTo>
    <relationshipLabel>Add-on Services</relationshipLabel>
    <relationshipName>Add_on_Services</relationshipName>
    <type>Lookup</type>
</CustomField>