force-app/main/default/objects/Add_on_Service__c/fields/Id_Opportunity_Quote_Line_item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Line_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Quote Line Item</label>
    <referenceTo>Opportunity_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Add-on Services</relationshipLabel>
    <relationshipName>Add_on_Services</relationshipName>
    <type>Lookup</type>
</CustomField>