force-app/main/default/objects/Add_on_Service__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Add-on Services</relationshipLabel>
    <relationshipName>Add_on_Services</relationshipName>
    <type>Lookup</type>
</CustomField>