force-app/main/default/objects/Add_on_Service__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>