force-app/main/default/objects/Add_on_Service__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Service Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>