force-app/main/default/objects/Add_on_Service__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Capacity - Competitors</fullName>
            </value>
            <value>
                <fullName>Capacity - Driver Issue</fullName>
            </value>
            <value>
                <fullName>Capacity - Order Volume</fullName>
            </value>
            <value>
                <fullName>Capacity - Own Website</fullName>
            </value>
            <value>
                <fullName>DH Delivery</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Legal Form Change</fullName>
            </value>
            <value>
                <fullName>Legal Issue</fullName>
            </value>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>New Owner - New Contract</fullName>
            </value>
            <value>
                <fullName>New Owner - No New Contract</fullName>
            </value>
            <value>
                <fullName>No Delivery Service</fullName>
            </value>
            <value>
                <fullName>Not Enough Orders</fullName>
            </value>
            <value>
                <fullName>Not Interested in Product</fullName>
            </value>
            <value>
                <fullName>Onboarding Failure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Issue</fullName>
            </value>
            <value>
                <fullName>Poor Performance</fullName>
            </value>
            <value>
                <fullName>Pricing - Admin Fee</fullName>
            </value>
            <value>
                <fullName>Pricing - Commission</fullName>
            </value>
            <value>
                <fullName>Pricing - Merchant Fee</fullName>
            </value>
            <value>
                <fullName>Pricing - Premium Placement</fullName>
            </value>
            <value>
                <fullName>Pricing - Setup Fee</fullName>
            </value>
            <value>
                <fullName>Product Change</fullName>
            </value>
            <value>
                <fullName>Product Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>