force-app/main/default/objects/Add_on_Service__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White Label Pages</fullName>
            </value>
            <value>
                <fullName>Phone Ordering Service</fullName>
            </value>
            <value>
                <fullName>Delivery Service</fullName>
            </value>
            <value>
                <fullName>Driver App.</fullName>
            </value>
            <value>
                <fullName>RFV</fullName>
            </value>
            <value>
                <fullName>Deal / Promotion</fullName>
            </value>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Extra Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>