force-app/main/default/objects/Add_on_Service__c/fields/Voucher_discount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_discount__c</fullName>
    <label>Voucher discount %</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>