force-app/main/default/objects/Add_on_Service__c/fields/Voucher_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Restrictions__c</fullName>
    <label>Voucher Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First time only</fullName>
            </value>
            <value>
                <fullName>Online payment only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>