force-app/main/default/objects/Add_on_Service__c/fields/Whitelable_Page_link__c.field-meta.xml
<CustomField>
    <fullName>Whitelable_Page_link__c</fullName>
    <label>Whitelable Page link</label>
    <type>Url</type>
</CustomField>