force-app/main/default/objects/Add_on_Service__c/recordTypes/AT_Add_On.recordType-meta.xml
<RecordType>
    <fullName>AT_Add_On</fullName>
    <active>true</active>
    <label>AT Add On</label>
</RecordType>