force-app/main/default/objects/Add_on_Service__c/recordTypes/CZ_Add_On.recordType-meta.xml
<RecordType>
    <fullName>CZ_Add_On</fullName>
    <active>true</active>
    <description>Czech Republic Add Ons</description>
    <label>CZ Add On</label>
</RecordType>