force-app/main/default/objects/Add_on_Service__c/recordTypes/DE_Add_On.recordType-meta.xml
<RecordType>
    <fullName>DE_Add_On</fullName>
    <active>true</active>
    <label>DE Add On</label>
</RecordType>