force-app/main/default/objects/Add_on_Service__c/recordTypes/DH_AU_Add_on.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Add_on</fullName>
    <active>true</active>
    <label>DH AU Add on</label>
</RecordType>