force-app/main/default/objects/Add_on_Service__c/recordTypes/FI_Add_on.recordType-meta.xml
<RecordType>
    <fullName>FI_Add_on</fullName>
    <active>true</active>
    <label>FI Add on</label>
</RecordType>