force-app/main/default/objects/Add_on_Service__c/recordTypes/FP_Add_On.recordType-meta.xml
<RecordType>
    <fullName>FP_Add_On</fullName>
    <active>true</active>
    <label>FP Add On</label>
</RecordType>