force-app/main/default/objects/Add_on_Service__c/recordTypes/HU_Add_On.recordType-meta.xml
<RecordType>
    <fullName>HU_Add_On</fullName>
    <active>true</active>
    <label>HU Add On</label>
</RecordType>