force-app/main/default/objects/Add_on_Service__c/recordTypes/PY_Add_On.recordType-meta.xml
<RecordType>
    <fullName>PY_Add_On</fullName>
    <active>true</active>
    <label>PY Add On</label>
</RecordType>