force-app/main/default/objects/Add_on_Service__c/recordTypes/SE_Add_on.recordType-meta.xml
<RecordType>
    <fullName>SE_Add_on</fullName>
    <active>true</active>
    <label>SE Add on</label>
</RecordType>