force-app/main/default/objects/Add_on_Service__c/recordTypes/Talabat_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Add_On</fullName>
    <active>true</active>
    <label>Talabat Add On</label>
</RecordType>