force-app/main/default/objects/Add_on_Service__c/recordTypes/UK_Add_On.recordType-meta.xml
<RecordType>
    <fullName>UK_Add_On</fullName>
    <active>true</active>
    <label>UK Add On</label>
</RecordType>