force-app/main/default/objects/Add_on_Service__c/recordTypes/Yogiyo_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Add_On</fullName>
    <active>true</active>
    <label>Yogiyo Add On</label>
</RecordType>