force-app/main/default/objects/Add_on_Service__c/validationRules/Global_not_Change_List_Add_On.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_not_Change_List_Add_On</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Status__c , &apos;Active&apos;) &amp;&amp; ISCHANGED( Id_List_Add_On__c ) , true, false)</errorConditionFormula>
    <errorMessage>List Add on can&apos;t be changed when the Add on service is active.</errorMessage>
</ValidationRule>