force-app/main/default/objects/Add_on_Service__c/validationRules/Global_Sales_cannot_set_status_to_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Sales_cannot_set_status_to_Active</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &quot;DE Sales Team&quot; 
&amp;&amp; 
TEXT(Status__c)= &quot;Active&quot; 
&amp;&amp; 
ISCHANGED(Status__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can not activate the Add on. Only the team in charge can activate them.</errorMessage>
</ValidationRule>