force-app/main/default/objects/Add_on_Service__c/validationRules/Terminated_Canceled_Addons_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Terminated_Canceled_Addons_status_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c),
OR(TEXT(PRIORVALUE(Status__c)) == &apos;Terminated&apos;, TEXT(PRIORVALUE(Status__c)) == &apos;Canceled&apos;),
NOT(TEXT(Status__c)=&quot;terminated&quot;),
NOT(TEXT(Status__c)=&quot;Canceled&quot;))</errorConditionFormula>
    <errorMessage>Status of add on cannot be changed once is Terminated or Canceled</errorMessage>
</ValidationRule>