force-app/main/default/objects/Add_on_Service__c/listViews/FP_SG_Add_on_Open_All.listView-meta.xml
<ListView>
    <fullName>FP_SG_Add_on_Open_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Id_List_Add_On__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Add_on_Service__c.FP_Add_On</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Final Check,Please Check</value>
    </filters>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>Foodpanda Singapore</value>
    </filters>
    <label>FP-SG - Add-on - Open(All)</label>
    <sharedTo>
        <group>FP_Editorial</group>
        <group>FP_Singapore_Users</group>
    </sharedTo>
</ListView>