force-app/main/default/objects/Add_on_Service__c/listViews/HU_Add_on_Open.listView-meta.xml
<ListView>
    <fullName>HU_Add_on_Open</fullName>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Id_List_Add_On__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Add_on_Service__c.HU_Add_On</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Active,Terminated,Canceled,Expired</value>
    </filters>
    <label>HU - Add-on - Open</label>
    <sharedTo>
        <group>HU_Account_Management</group>
        <group>HU_Content_Team</group>
        <group>HU_Restaurant_Operations</group>
        <group>HU_Sales_Operations</group>
        <group>HU_Sales_Team</group>
        <role>HU_Account_Manager</role>
        <role>HU_Management</role>
        <role>HU_Operations_Agent</role>
        <role>HU_Operations_Management</role>
        <role>HU_Sales_Agent</role>
        <role>HU_Sales_Management</role>
    </sharedTo>
</ListView>