force-app/main/default/objects/Add_on_Service__c/listViews/PY_Add_on_Combo_Coca.listView-meta.xml
<ListView>
    <fullName>PY_Add_on_Combo_Coca</fullName>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Id_List_Add_On__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_List_Add_On__c</field>
        <operation>contains</operation>
        <value>Combo Coca</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Final Check</value>
    </filters>
    <label>PY Add-on Combo Coca</label>
    <language>en_US</language>
    <sharedTo>
        <group>PY_Editorial</group>
        <role>PY_Editorial</role>
    </sharedTo>
</ListView>