force-app/main/default/objects/Add_on_Service__c/listViews/PY_Addon_Services.listView-meta.xml
<ListView>
    <fullName>PY_Addon_Services</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Id_List_Add_On__c</columns>
    <columns>Company__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Add_on_Service__c.PY_Add_On</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>PY Addon Services</label>
    <language>en_US</language>
    <sharedTo>
        <role>PY_Editorial</role>
    </sharedTo>
</ListView>