force-app/main/default/objects/Add_on_Service__c/listViews/Talabat_Add_On_s.listView-meta.xml
<ListView>
    <fullName>Talabat_Add_On_s</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Id_List_Add_On__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Add_on_Service__c.Talabat_Add_On</value>
    </filters>
    <label>Talabat Add On&apos;s</label>
    <language>en_US</language>
    <sharedTo>
        <role>Talabat_Management</role>
        <roleAndSubordinates>Global_Admin</roleAndSubordinates>
        <roleAndSubordinates>Global_Management</roleAndSubordinates>
    </sharedTo>
</ListView>